k8s/arrow-native.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    type: game-object
    app: arrow
    version: v1-native
  name: arrow-native
spec:
  replicas: 0
  selector:
    matchLabels:
      app: arrow
      version: v1-native
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
      labels:
        project: gos
        type: game-object
        app: arrow
        version: v1-native
    spec:
      containers:
      - image: gos/gos-arrow-native:dev
        imagePullPolicy: Never
        name: arrow-native
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: arrow
  labels:
    project: gos
    type: game-object
    app: arrow
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: arrow
