k8s/catapult-vertx-hotspot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    type: game-object
    app: catapult
    runtime: vertx
    version: v1-vertx
  name: catapult-vertx
spec:
  replicas: 0
  selector:
    matchLabels:
      app: catapult
      version: v1-vertx
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/port: "9090"
      labels:
        project: gos
        type: game-object
        app: catapult
        runtime: vertx
        version: v1-vertx
    spec:
      containers:
        - image: gos/gos-catapult-vertx-hotspot:dev
          imagePullPolicy: Never
          name: catapult-vertx
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          securityContext:
            privileged: false
#          readinessProbe:
#            exec:
#              command:
#                - curl
#                - localhost:8081/health
#            initialDelaySeconds: 10
#            periodSeconds: 5
#            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: catapult
  labels:
    project: gos
    type: game-object
    app: catapult
spec:
  ports:
    - name: http
      port: 8081
  selector:
    app: catapult
