k8s/hero-hotspot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    app: hero
    version: v1
  name: hero
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hero
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
      labels:
        project: gos
        app: hero
        version: v1
    spec:
      containers:
      - image: localhost:5000/jotak/gos-hero-hotspot:dev
        imagePullPolicy: IfNotPresent
        name: hero
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: hero
  labels:
    project: gos
    app: hero
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: hero
