k8s/hero-native-with-bow.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    type: game-object
    app: hero
    version: v1-native
  name: hero-native-with-bow
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hero
      version: v1-native
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
      labels:
        project: gos
        type: game-object
        app: hero
        version: v1-native
    spec:
      containers:
      - image: gos/gos-hero-native:dev
        imagePullPolicy: Never
        name: hero-native-with-bow
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: hero
  labels:
    project: gos
    type: game-object
    app: hero
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: hero
