k8s/ui-hotspot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    app: ui
    version: v1
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/port: "9090"
#        status.sidecar.istio.io/port: "0"
      labels:
        project: gos
        app: ui
        version: v1
    spec:
      containers:
      - image: localhost:5000/jotak/gos-hotspot-ui:dev
        imagePullPolicy: IfNotPresent
        name: ui
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        securityContext:
          privileged: false
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8081/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  labels:
    project: gos
    app: ui
spec:
  ports:
    - name: http
      port: 8081
  selector:
    app: ui
