k8s/villains-oj9.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    type: game-object
    app: villains
    version: v1
  name: villains-oj9
spec:
  replicas: 0
  selector:
    matchLabels:
      app: villains
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
        prometheus.io/port: "9090"
      labels:
        project: gos
        type: game-object
        app: villains
        version: v1
    spec:
      containers:
        - image: gos/gos-villains-oj9:dev
          imagePullPolicy: Never
          name: villains
          ports:
            - containerPort: 8081
              name: http
              protocol: TCP
          securityContext:
            privileged: false
#          readinessProbe:
#            exec:
#              command:
#                - curl
#                - localhost:8081/health
#            initialDelaySeconds: 10
#            periodSeconds: 5
#            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: villains
  labels:
    project: gos
    type: game-object
    app: villains
spec:
  ports:
    - name: http
      port: 8081
  selector:
    app: villains
