k8s/web-base.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    type: web
    app: web
    version: base
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: base
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
      labels:
        project: gos
        type: web
        app: web
        version: base
    spec:
      containers:
      - image:
        imagePullPolicy: Never
        name: web
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    project: gos
    type: web
    app: web
spec:
  ports:
    - name: http
      port: 8081
  selector:
    app: web
