k8s/web-hotspot.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    project: gos
    app: web
    version: v1
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/scheme: "http"
      labels:
        project: gos
        app: web
        version: v1
    spec:
      containers:
      - image: localhost:5000/jotak/gos-web-hotspot:dev
        imagePullPolicy: IfNotPresent
        name: ui
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    project: gos
    app: web
spec:
  ports:
    - name: http
      port: 8081
  selector:
    app: web
