k8s/kafka-service-entry.yml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: kafka-service-entry
spec:
  hosts:
          #    - my-cluster-kafka-0.my-cluster-kafka-brokers.kafka
    - my-cluster-kafka-brokers
  ports:
    - name: tcp-replication
      number: 9091
      protocol: tcp
    - name: tcp-clients
      number: 9092
      protocol: tcp
    - name: tcp-clientstls
      number: 9093
      protocol: tcp
  location: MESH_EXTERNAL
  resolution: NONE
