k8s/web-route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: web
  labels:
    app: web
    project: gos
    type: web
spec:
  subdomain: ''
  to:
    kind: Service
    name: web
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
